--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -21,11 +21,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up QEMU
+        if: runner.os == 'Linux'
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: all
+
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.11.2
+        uses: pypa/cibuildwheel@v2.11.3
         env:
           CIBW_BEFORE_ALL_LINUX: yum install -y libvpx-devel opus-devel
-          CIBW_BUILD: cp38-manylinux_x86_64 cp310-manylinux_x86_64 cp311-manylinux_x86_64
+          CIBW_BUILD: cp38-manylinux_x86_64 cp310-manylinux_x86_64 cp311-manylinux_x86_64 cp38-manylinux_aarch64 cp310-manylinux_aarch64 cp311-manylinux_aarch64
+          CIBW_ARCHS_LINUX: auto aarch64
 
       - uses: actions/upload-artifact@v3
         with:
